--- a/conda/conda-bld/linux-64/index.html
+++ b/conda/conda-bld/linux-64/index.html
@@ -54,35 +54,35 @@
     </tr>
     <tr>
       <td><a href="repodata.json" alt="repodata.json">repodata.json</a></td>
-      <td class="s">890 B</td>
-      <td>2020-01-19 04:33:15 +0000</td>
-      <td>a5cdb8ce1d40bb25b78cdd3f3504a5e402ae53f58aa86851c6fded37dfd33b5d</td>
-      <td>16b874762ab5129363c807ac18b77e93</td>
+      <td class="s">973 B</td>
+      <td>2020-01-21 08:56:33 +0000</td>
+      <td>ee562780823fcac22f87ec5dcf5f72d88d20024f76d6bf19b83764a4781412af</td>
+      <td>29ee1a0d69398be5e07ac69f37df25d4</td>
     </tr>    <tr>
       <td><a href="repodata.json.bz2" alt="repodata.json.bz2">repodata.json.bz2</a></td>
-      <td class="s">488 B</td>
-      <td>2020-01-19 04:33:15 +0000</td>
-      <td>a1917e9b2fe0bf670087e5fda5e220c49d2e88be387c1c4eda483307d2cd8b31</td>
-      <td>62ac4b4e5303334bc3c375b157fb95af</td>
+      <td class="s">512 B</td>
+      <td>2020-01-21 08:56:33 +0000</td>
+      <td>6e50e9a8e8daad54fee196bbf7258853b62e23a117258178a885db9fa4e78899</td>
+      <td>6866e0a3b89108e00630f399f846b6dc</td>
     </tr>    <tr>
       <td><a href="repodata_from_packages.json" alt="repodata_from_packages.json">repodata_from_packages.json</a></td>
-      <td class="s">890 B</td>
-      <td>2020-01-19 04:33:15 +0000</td>
-      <td>a5cdb8ce1d40bb25b78cdd3f3504a5e402ae53f58aa86851c6fded37dfd33b5d</td>
-      <td>16b874762ab5129363c807ac18b77e93</td>
+      <td class="s">973 B</td>
+      <td>2020-01-21 08:56:33 +0000</td>
+      <td>ee562780823fcac22f87ec5dcf5f72d88d20024f76d6bf19b83764a4781412af</td>
+      <td>29ee1a0d69398be5e07ac69f37df25d4</td>
     </tr>    <tr>
       <td><a href="repodata_from_packages.json.bz2" alt="repodata_from_packages.json.bz2">repodata_from_packages.json.bz2</a></td>
-      <td class="s">488 B</td>
-      <td>2020-01-19 04:33:15 +0000</td>
-      <td>a1917e9b2fe0bf670087e5fda5e220c49d2e88be387c1c4eda483307d2cd8b31</td>
-      <td>62ac4b4e5303334bc3c375b157fb95af</td>
+      <td class="s">512 B</td>
+      <td>2020-01-21 08:56:33 +0000</td>
+      <td>6e50e9a8e8daad54fee196bbf7258853b62e23a117258178a885db9fa4e78899</td>
+      <td>6866e0a3b89108e00630f399f846b6dc</td>
     </tr>    <tr>
-      <td><a href="mkconda-0.0.7-h39e3cac_0.tar.bz2" alt="mkconda-0.0.7-h39e3cac_0.tar.bz2">mkconda-0.0.7-h39e3cac_0.tar.bz2</a></td>
-      <td class="s">51 KB</td>
-      <td>2020-01-19 04:33:14 +0000</td>
-      <td>9ad5bcceb40fb04bcb51c04f68abd6efdfc4a7b981354b96c3b563618f5509f1</td>
-      <td>674030613a6ca7e579c7a1813d9be929</td>
+      <td><a href="mkconda-0.0.8-py36h39e3cac_0.tar.bz2" alt="mkconda-0.0.8-py36h39e3cac_0.tar.bz2">mkconda-0.0.8-py36h39e3cac_0.tar.bz2</a></td>
+      <td class="s">121 KB</td>
+      <td>2020-01-21 08:56:33 +0000</td>
+      <td>50bda7184c18eb2e225b53dab939cf72cac149978813f2d4ad3a8cded412f078</td>
+      <td>edf84d99e44b91954d4cdaa9c7e49420</td>
     </tr>  </table>
-  <address>Updated: 2020-01-19 04:33:18 +0000 - Files: 1</address>
+  <address>Updated: 2020-01-21 08:56:35 +0000 - Files: 1</address>
 </body>
 </html>
